src/test/deca/context/invalid/sansobjet/doubleDef.deca
// The Definition of this Symbol is already in the environment
// Description : Double definition in the same environement
// Resultat : x est re déclaré : erreur ligne 7

{
    int x = 5;
    int x = 6;
}